--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-/* DEFAULT */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* TABELLA */ 
+.my-table {
+    width: 50%;
+    margin: 10px auto;
+    border: 1px solid;
 }
+
